--- a/frontend/index.html
+++ b/frontend/index.html
@@ -80,11 +80,12 @@
                 </svg>
                 github.com
             </button>
-            <button class="chip" data-url="producthunt.com">
+            <button class="chip" data-url="wikipedia.org">
                 <svg class="chip-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
+                    <circle cx="12" cy="12" r="10"></circle>
+                    <path d="M2 12h20M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path>
                 </svg>
-                producthunt.com
+                wikipedia.org
             </button>
         </div>
 
