fix: replace protected sites with bbc.com in examples

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -80,12 +80,13 @@
                 </svg>
                 github.com
             </button>
-            <button class="chip" data-url="wikipedia.org">
+            <button class="chip" data-url="bbc.com">
                 <svg class="chip-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <circle cx="12" cy="12" r="10"></circle>
-                    <path d="M2 12h20M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path>
+                    <rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect>
+                    <line x1="8" y1="21" x2="16" y2="21"></line>
+                    <line x1="12" y1="17" x2="12" y2="21"></line>
                 </svg>
-                wikipedia.org
+                bbc.com
             </button>
         </div>
 
