feat: add Wayback Machine dates, HTML canonical, hreflang chips
- Add WaybackClient service for first/last archive dates
- Add alternate URLs parsing to parser
- Update analyze endpoint with new fields
- Add new info chips: last_indexed, html_canonical, hreflang summary
- Update frontend to display all new data

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -149,6 +149,29 @@
                     <span id="first-indexed-value" class="chip-value"></span>
                 </div>
 
+                <!-- Last Indexed Date -->
+                <div id="chip-last-indexed" class="info-chip date" style="display: none;">
+                    <span class="chip-emoji">&#128197;</span>
+                    <span id="last-indexed-value" class="chip-value"></span>
+                </div>
+
+                <!-- HTML Canonical -->
+                <div id="chip-html-canonical" class="info-chip canonical-html" style="display: none;">
+                    <svg class="chip-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"></path>
+                        <path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"></path>
+                    </svg>
+                    <span class="chip-label">HTML CANONICAL</span>
+                    <span id="html-canonical-value" class="chip-value"></span>
+                </div>
+
+                <!-- Hreflang -->
+                <div id="chip-hreflang" class="info-chip hreflang" style="display: none;">
+                    <span class="chip-emoji">&#127760;</span>
+                    <span class="chip-label">HREFLANG</span>
+                    <span id="hreflang-value" class="chip-value"></span>
+                </div>
+
                 <!-- Published Date -->
                 <div id="chip-published" class="info-chip date" style="display: none;">
                     <span class="chip-emoji">&#128221;</span>
